syntax = "proto3";

package todos;

import "google/protobuf/empty.proto";

service Todos {
    rpc ListTodos (ListTodosRequest) returns ( ListTodosResponse ) {
    }
    rpc GetTodo (GetTodoRequest) returns (Todo) {
    }
    rpc CreateTodo (CreateTodoRequest) returns (Todo) {
    }
    rpc UpdateTodo (UpdateTodoRequest) returns (Todo ) {
    }
    rpc DeleteTodo (DeleteTodoRequest) returns (google.protobuf.Empty) {
    }
    rpc DeleteAllTodos (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
}

message Todo {
    string id = 1;
    string title = 2;
    string url = 3;
    bool completed = 4;
    int64 order = 5;
    string test = 6;
}

message ListTodosRequest {

}

message ListTodosResponse {
    repeated Todo todos = 1;
}

message GetTodoRequest {
    string id = 1;
}

message DeleteTodoRequest {
    string id = 1;
}

message CreateTodoRequest {
    Todo todo = 1;
}

message UpdateTodoRequest {
    Todo todo = 1;
}
